add animation for  offer document-

--- a/offer.html
+++ b/offer.html
@@ -68,11 +68,11 @@
 				<h2 class="heading-secondary u-margin-bottom-medium flex100"> Oferujemy</h2>
 		
 
-					<div class="about__col">
+					<div class="about__col ">
 					<p class="paragraph "><strong> Obróbka Skrawaniem:</strong> </p>
 <p class="paragraph ">Oferujemy Państwu procesy frezowania i toczenia realizowane na maszynach CNC. Ponadto oferujemy szlifowanie płaszczyzn</p>
 				</div>
-					<div class="about__col">
+					<div class="about__col ">
 				<picture class="about_img">
 						<source srcset="img/offer1.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/offer1.jpg" alt="Stare zdjęcie">
@@ -83,13 +83,13 @@
 
 			<!-- Usługa 2 --------------------------------------------------------------->
 			<div class="flex flex-row about">
-				<div class="about__col">
+				<div class="about__col box">
 				<picture class="about_img">
 						<source srcset="img/offer2.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/offer2.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
-					<div class="about__col">
+					<div class="about__col box">
 					<p class="paragraph "><strong> Spawanie konstrukcji:</strong></p>
 <p class="paragraph ">Wykorzystujemy nasze doświadczenie oraz dobrej jakości sprzęt aby jak najlepiej wykonać spawy.</p>
 				</div>
@@ -100,12 +100,12 @@
 			<!-- Usługa 3 --------------------------------------------------------------->
 			<div class="flex flex-row about">
 			
-				<div class="about__col">
+				<div class="about__col box">
 					<p class="paragraph "><strong> Usługi druku 3D:</strong></p>
 	<p class="paragraph ">Wykonujemy detale w technologii FDM (nakładanie warstw) co pomaga obniżyć koszty w prototypowaniu detali.</p>
 				</div>
 
-					<div class="about__col">
+					<div class="about__col box">
 				<picture class="about_img">
 						<source srcset="img/offer3.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/offer3.jpg" alt="Stare zdjęcie">
@@ -115,13 +115,13 @@
 			</div>
 			<!-- Usługa 4 --------------------------------------------------------------->
 			<div class="flex flex-row about">
-				<div class="about__col">
+				<div class="about__col box">
 				<picture class="about_img">
 						<source srcset="img/offer4.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/offer4.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
-				<div class="about__col">
+				<div class="about__col box">
 					<p class="paragraph "><strong> Projektowanie:</strong></p>
 	<p class="paragraph ">Pracujemy na oprogramowaniu CAD umożliwiający opracowanie dokumentacji 3D oraz 2D. Potrafimy odtworzyć element na
 podstawie istniejącego wzoru.</p>
@@ -135,11 +135,11 @@ podstawie istniejącego wzoru.</p>
 			<!-- Usługa  5--------------------------------------------------------------->
 			<div class="flex flex-row about">
 			
-				<div class="about__col">
+				<div class="about__col box">
 					<p class="paragraph ">Usługi Ślusarskie:</strong></p>
 	<p class="paragraph ">obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</p>
 				</div>
-		<div class="about__col">
+		<div class="about__col box">
 					<picture class="about_img">
 						<source srcset="img/detale1.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/detale1.jpg" alt="Stare zdjęcie">
@@ -149,23 +149,23 @@ podstawie istniejącego wzoru.</p>
 			</div>
 			<!-- Usługa  6--------------------------------------------------------------->
 			<div class="flex flex-row about">
-				<div class="about__col">
+				<div class="about__col box">
 					<picture class="about_img">
 						<source srcset="img/offer6.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/offer6.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
-					<div class="about__col">
+					<div class="about__col box">
 					<p class="paragraph ">Doradztwo pod względem technicznym a także pomoc w usprawnieniu procesów produkcyjnych.</p>
 				</div>
 			</div>
 
 		
 			<!-- CEL --------------------------------------------------------------->
-			<div class="flex flex-row about">
+			<div class="flex flex-row about ">
 				<h2 class="heading-secondary u-margin-bottom-medium flex100"> Nasz cel
 			</h2>
-				<div class="about__col">
+				<div class="about__col box">
 					<p class="paragraph ">Za podstawowy cel naszej działalności stawiamy:
 						<ul class="about__list">
 							<li class="about__list-item">Wysoką jakość usług,</li>
@@ -177,7 +177,7 @@ podstawie istniejącego wzoru.</p>
 </p>
 				</div>
 
-					<div class="about__col">
+					<div class="about__col box">
 				<picture class="about_img">
 						<source srcset="img/target.jpg" media="(max-width:56.75em)">
 						<img class="about__img" style="border-radius: 100%;" srcset="img/target.jpg" alt="Stare zdjęcie">
