add about animations

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 			<div class="flex flex-row about">
 				<h2 class="heading-secondary u-margin-bottom-medium flex100"> Kim jesteśmy?
 					</h2>
-				<div class="about__col">
+				<div class="about__col box">
 				<picture class="about_img">
 						<source srcset="img/detale2.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/detale2.jpg" alt="Kolaż zdjęć">
@@ -75,7 +75,7 @@
 
 				
 
-				<div class="about__col ">
+				<div class="about__col box ">
 					
 					<p class="paragraph ">Jesteśmy firma złożona z przyjaciół. Połączyła nas wspólna pasja do tworzenia i konstruowania. Razem chcieliśmy stworzyć coś
 wyjątkowego. Postanowiliśmy zrealizować nasze marzenia dlatego przedstawiamy Państwu <strong>GK-SOLUTIONS</strong>. Każdy z członków firmy
@@ -94,7 +94,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 			<div class="flex flex-row about">
 				<h2 class="heading-secondary u-margin-bottom-medium flex100"> Nasz cel
 			</h2>
-				<div class="about__col">
+				<div class="about__col box">
 					<p class="paragraph ">Za podstawowy cel naszej działalności stawiamy:
 						<ul class="about__list">
 							<li class="about__list-item">wysoką jakość usług,</li>
@@ -106,7 +106,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 </p>
 				</div>
 
-					<div class="about__col">
+					<div class="about__col box">
 				<picture class="about_img">
 						<source srcset="img/detale1.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/detale1.jpg" alt="Stare zdjęcie">
@@ -126,7 +126,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 				<h2 class="heading-secondary u-margin-bottom-medium flex100">Park maszynowy
 			</h2>
 			
-		<div class="about__col">
+		<div class="about__col box">
 					<div class="about__composition">
 
 
@@ -153,7 +153,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 				</div>
 			
 			
-			<div class="about__col">
+			<div class="about__col box">
 					<ul class="about__list">
 						<li class="about__list-item">Frezarka,</li>
 						<li class="about__list-item">Tokarka ,</li>
