tracking tag google

--- a/index.html
+++ b/index.html
@@ -33,8 +33,19 @@
 				width:50rem;
 			}
 			</style>
-		<title>GK-Soutions</title>
+		<title>GK-Solutions</title>
 	</head>
+	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LWSZZQLL12"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LWSZZQLL12');
+</script>
+
 	<body>
 		<div class="header__contactbar">
 			<ul class="header__contact-list">
