--- a/kontakt.html
+++ b/kontakt.html
@@ -27,8 +27,19 @@
 			rel="stylesheet"
 		/>
 
-		<title>GK-Soutions - kontakt</title>
+		<title>GK-Solutions - kontakt</title>
 	</head>
+	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LWSZZQLL12"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LWSZZQLL12');
+</script>
+
 	<body>
 			<div class="header__contactbar">
 				<ul class="header__contact-list">
