about fix, cta button  add

--- a/index.html
+++ b/index.html
@@ -82,19 +82,18 @@
 						<section class="section-about u-center-text">
 							<div class="flex flex-row about">
 								<div>
-									<div class="header__banner">
-										<div class="banner">	</div>
-										<h2 class=" banner__text u-center-text "> 		
-											<p>GK-solutions</p>
-											<p> Obróbka metalu i plastiku</p>
-
-										</h2>
-										<a href="/about.html" class="banner__button">Więcej o nas...</a>
+									<div class="banner">
+										<h2 class=" banner__text u-center-text  banner__text--main"> 		
+											GK-solutions</h2>
+										<h2 class="u-center-text banner__text--sub banner__text  "> 		
+											Obróbka metalu i plastiku</h2>
+										<a href="/about.html" class="banner__button banner__button--1">Więcej o nas...</a>
+										<a href="tel:+48535518553" class="banner__button">Zadzwoń</a>
 									</div>
 				<p class="paragraph ">
 					Produkujemy wyroby z metali i tworzyw sztucznych,
 					świadczymy usługi z zakresu szeroko rozumianej obróbki na obrabiarkach CNC,
-					konstruujemy przyrządy i narzędzia wykorzystywane w procesie produkcji.
+					konstruujemy przyrządy i narzędzia wykorzystywane w gprocesie produkcji.
 					Toczymy, frezujemy, szlifujemy oraz spawamy.
 					Specjalizujemy się wykonywaniu detali małogabarytowych, jednostkowych oraz seryjnych a także na wykonywaniu konstrukcji
 					spawanych. Tworzymy części na podstawie dokumentacji technicznej oraz w procesie tzw. inżynierii wstecznej.
