--- a/offer.html
+++ b/offer.html
@@ -147,7 +147,7 @@ podstawie istniejącego wzoru.</p>
 			<div class="flex flex-row about">
 			
 				<div class="about__col box">
-					<p class="paragraph ">Usługi Ślusarskie:</strong></p>
+					<p class="paragraph "> <strong> Usługi Ślusarskie:</strong></p>
 	<p class="paragraph ">obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</p>
 				</div>
 		<div class="about__col box">
